--- a/src/index.html
+++ b/src/index.html
@@ -67,20 +67,20 @@
     </nav>
 
     <header class="header header--layout-large">
-
-        <div class="header__content-box grid grid__align-v">
-            <div class="grid__span7 header__content-box--left">
+        <div class="header__content-box-large grid grid__align-v">
+            <div class="header__content-box-large--left">
                 <h1 class="header__title header__title--small">
                     <span class="header__title-top">We help global brands </span>
-                    Develop digital world</h1>
+                    Develop digital world
+                </h1>
                 <h2 class="header__subtitle margin-t-medium">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est eaque cumque, exercitationem veniam labore aspernatur obcaecati minus aut sint placeat officia?</h2>
 
-                <div class="button-container">
-                    <a class="button-primary button-primary--shw-black button-primary--white margin-r-medium margin-t-huge">Our Services</a>
+                <div class="button-container  margin-t-huge">
+                    <a href="#" class="button-primary button-primary--shw-black button-primary--white margin-r-medium">Our Services</a>
                     <a href="#" class="button-tertiary button-tertiary--white">Our Portfolio</a>
                 </div>
             </div>
-            <div class="grid__span5 header__content-box--right">
+            <div class="header__content-box-large--right">
                 <img src="assets/img/header_img.png" alt="Hero Image" class="header__img">
             </div>
         </div>
