Made cookiespolicy.html & privacypolicy.html and add components the pages

--- a/src/index.html
+++ b/src/index.html
@@ -203,6 +203,105 @@
         </symbol>
     </svg>
 
+    <!-- Footer Waves -->
+    <svg width="0" height="0">
+        <symbol id="footer-wave">
+            <g transform="translate(-13150 -4340)">
+            <path d="M1920,0V153.1s-19.331-55.118-86.32-28.386-177.9,87.788-273.227,45.505c-49.84-22.1-101.4-56.762-148.732-86.656-65.472-41.368-130.089-70.979-203.848-78.97-58.016-6.205-113.44,20.51-157.76,68.715C999.28,128.59,950.4,208.3,884.3,232.251c-64.7,23.493-130.16-14.566-190.608-52.864S573.44,94.472,506.624,85.654c-95.568-12.737-181.248,115.912-270.24,150.661-48.32,18.855-94.4,13.434-139.344-16.33C61.152,196.275,20.24,173.29,0,124.715V0Z" transform="translate(13150 4340)" fill="#fff" opacity="0.5"/>
+            <path d="M0,0V185.633c76.464,55.473,252.8,0,252.8,0S470.928,102.4,583.68,91.93c118.144-10.895,236.064,42.179,349.12,88.106,110.832,44.978,221.28,62.169,335.04,32.684,57.84-14.993,111.76-44.578,167.12-73.314C1583.184,62.469,1780.8,13.218,1920,180.036V0Z" transform="translate(13150 4340)" fill="#fff" opacity="0.25"/>
+            <path d="M0,34.248V172.611c239.888,95.287,414.957,82.1,673.741,30.771,68.8-13.64,242.472-70.153,332.708-70.153s154.962,24.387,246.113,47.992c95.32,30.532,221.935,64.189,295.378,63.677s117.214-3.222,210.229-31.14S1920,133.229,1920,133.229V34.248Z" transform="translate(13150 4305.751)" fill="#fff"/>
+            </g>
+        </symbol>
+    </svg>
+
+    <footer class="footer">
+        <!-- Waves -->
+        <svg class="footer__waves" viewBox="0 0 1920 247.295">
+            <use href="#footer-wave"></use>
+        </svg>
+
+        <div class="footer__content-box grid">
+            <div class="footer__part grid__span3 footer__part--1">
+                <div class="footer__logo">
+                    <svg viewBox="0 0 213.521 56.407">
+                        <use href="#logo"></use>
+                    </svg>
+                </div>
+
+                <p class="paragraph paragraph--white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit sint eveniet iste natus ducimus unde fugit molestias ex libero incidunt ullam expedita, repellat ratione perferendis, velit, soluta consequuntu.</p>
+            </div>
+            <div class="footer__part grid__span3 footer__part--2">
+                <h3 class="footer__heading">Services</h3>
+
+                <ul class="footer__list">
+                    <li class="footer__item"><a class="paragraph paragraph--white" href="#">Website Development</a></li>
+                    <li class="footer__item"><a class="paragraph paragraph--white" href="#">Mobile App Development</a></li>
+                    <li class="footer__item"><a class="paragraph paragraph--white" href="#">UI/UX Design</a></li>
+                    <li class="footer__item"><a class="paragraph paragraph--white" href="#" style="line-height: 1.2;">Search Engine Optimization</a></li>
+                    <li class="footer__item"><a class="paragraph paragraph--white" href="#">Digital Marketing</a></li>
+                    <li class="footer__item"><a class="paragraph paragraph--white" href="#">Bot Development</a></li>
+                </ul>
+            </div>
+            <div class="footer__part grid__span3 footer__part--3">
+                <h3 class="footer__heading">Insights</h3>
+
+                <ul class="footer__list footer__insights">
+                    <li class="footer__item"><a class="paragraph paragraph--white" href="#">About us</a></li>
+                    <li class="footer__item"><a class="paragraph paragraph--white" href="#">Contact us</a></li>
+                    <li class="footer__item"><a class="paragraph paragraph--white" href="#">Portfolio</a></li>
+                    <li class="footer__item"><a class="paragraph paragraph--white" href="#">Blogs</a></li>
+                    <li class="footer__item"><a class="paragraph paragraph--white" href="./pages/privacypolicy.html">Privacy Policy</a></li>
+                    <li class="footer__item"><a class="paragraph paragraph--white" href="./pages/termsandcondition.html">Terms & Conditions</a></li>
+                    <li class="footer__item"><a class="paragraph paragraph--white" href="./pages/cookiespolicy.html">Cookies Policy</a></li>
+                </ul>
+            </div>
+            <div class="footer__part grid__span3 footer__part--4">
+                <h3 class="footer__heading">Contact</h3>
+
+                <ul class="footer__contact-list">
+                    <li class="footer__contact-details">
+                        <p class="paragraph paragraph--white">+91-8927412738</p>
+                    </li>
+                    <li class="footer__contact-details">
+                        <p class="paragraph paragraph--white">+91-9271930183</p>
+                    </li>
+                    <li class="footer__contact-details">
+                        <p class="paragraph paragraph--white">example@example.com</p>
+                    </li>
+                    <li class="footer__social-media-box">
+                        <div class="footer__social-m-item">
+                            <a href="#">
+                                <svg viewBox="0 0 48 48"><use href="#mail"></use></svg>
+                            </a>
+                        </div>
+                        <div class="footer__social-m-item">
+                            <a href="#">
+                                <svg viewBox="0 0 48 48"><use href="#linkedin"></use></svg>
+                            </a>
+                        </div>
+                        <div class="footer__social-m-item">
+                            <a href="#">
+                                <svg viewBox="0 0 48 48"><use href="#twitter"></use></svg>
+                            </a>
+                        </div>
+                        <div class="footer__social-m-item">
+                            <a href="#">
+                                <svg viewBox="0 0 48 48"><use href="#medium"></use></svg>
+                            </a>
+                        </div>
+                        <div class="footer__social-m-item">
+                            <a href="#">
+                                <svg viewBox="0 0 48 48"><use href="#instagram"></use></svg>
+                            </a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__copywrite">
+                <p class="paragraph paragraph--white"><small>&copy; muon.io 2021 | All rights reserved.</small></p>
+            </div>
+        </div>
+    </footer>
     <script src="./js/index.js"></script>
 </body>
 </html>
