--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
             </div>
 
             <div class="header__content-box-large--right">
-                <img src="assets/img/header_img.png" alt="Hero Image" class="header__img">
+                <img src="assets/img/header_img.png" alt="Hero Image" class="home-header__img">
             </div>
             
             <div class="social">
@@ -250,9 +250,9 @@
                     <li class="footer__item"><a class="paragraph paragraph--white" href="#">Contact us</a></li>
                     <li class="footer__item"><a class="paragraph paragraph--white" href="#">Portfolio</a></li>
                     <li class="footer__item"><a class="paragraph paragraph--white" href="#">Blogs</a></li>
-                    <li class="footer__item"><a class="paragraph paragraph--white" href="./pages/privacypolicy.html">Privacy Policy</a></li>
-                    <li class="footer__item"><a class="paragraph paragraph--white" href="./pages/termsandcondition.html">Terms & Conditions</a></li>
-                    <li class="footer__item"><a class="paragraph paragraph--white" href="./pages/cookiespolicy.html">Cookies Policy</a></li>
+                    <li class="footer__item"><a class="paragraph paragraph--white" href="./pages/tertiary/privacypolicy.html">Privacy Policy</a></li>
+                    <li class="footer__item"><a class="paragraph paragraph--white" href="./pages/tertiary/termsandcondition.html">Terms & Conditions</a></li>
+                    <li class="footer__item"><a class="paragraph paragraph--white" href="./pages/tertiary/cookiespolicy.html">Cookies Policy</a></li>
                 </ul>
             </div>
             <div class="footer__part grid__span3 footer__part--4">
